--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,12 +17,12 @@ body::-webkit-scrollbar-track {
 
 /* Handle */
 body::-webkit-scrollbar-thumb {
-  background: #5B56BD;
+  background: #101010;
 }
 
 /* Handle on hover */
 body::-webkit-scrollbar-thumb:hover {
-  background: #0A004A;
+  background: #b78a34;
 }
 
 @media only screen and (max-width: 1130px) and (min-width: 320px){
