--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,319 +1,509 @@
-.backgroundImage {
+@font-face {
+    font-family: gotham-medium;
+    src: url('/public/fonts/Gotham/Gotham-Medium.otf');
+}
+
+@font-face {
+    font-family: gotham-book;
+    src: url('/public/fonts/Gotham/Gotham-Book.otf');
+}
+
+@font-face {
+    font-family: inter-semibold;
+    src: url('/public/fonts/Inter/Inter-SemiBold.ttf');
+}
+
+@font-face {
+    font-family: inter-regular;
+    src: url('/public/fonts/Inter/Inter-Regular.ttf');
+}
+
+.footerContainer {
     position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #101010;
     width: 100vw;
-    max-width: 1530px;
-    height: 617px;
+    height: 754px;
     margin: auto;
     overflow-x: hidden;
-    margin-top: -200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+
 }
-a { text-decoration: none; color: #dbdad7}
-a:visited { text-decoration: none; }
-a:hover { text-decoration: none; }
-a:focus { text-decoration: none; }
-a:hover, a:active { text-decoration: none; }
+
+.footerContainerMobile {
+    display: none;
+
+}
+
+a {
+    text-decoration: none;
+    color: #dbdad7
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:focus {
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    text-decoration: none;
+}
 
 .footerName {
     align-items: flex-end;
 
 }
 
-.footerInfo {
-    position: absolute;
-    width: 100%;
-    height: 515px;
+.footerLeft {
+    height: 754px;
+    box-sizing: border-box;
     display: flex;
-    justify-content: center;
+    position: relative;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin-bottom: 100px;
 }
 
-
-
-.innerFooterInfo {
-    width: 1110px;
-    height: 515px;
+.topLeft {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    width: 330px;
+    height: 38px;
+    margin-bottom: 100px;
+
+}
+
+.spanJoin {
+    font: 500 30px'gotham-medium', normal;
+    line-height: 38px;
+    color: #FFFFFF;
+}
+
+
+
+.bottomLeft {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    width: 330px;
+    height: 221px;
+    justify-content: space-between;
+}
+
+.monetize {
+    position: relative;
+    width: 330px;
+    height: 30px;
+    margin-top: 20px;
+}
+
+.spanMonetize {
+    font: 400 16px'gotham-book', normal;
+    line-height: 30px;
+    color: #FFFFFF;
+}
+
+.social {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    position: relative;
+    width: 247px;
+    height: 30.3px;
+    justify-content: space-between;
+}
+
+.copyright {
+    position: relative;
+    width: 330px;
+    height: 24px;
+}
+
+.spanCopy {
+    font: 400 14px'gotham-book', normal;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+
+.footerRight {
+    height: 754px;
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-content: flex-start;
+    align-items: flex-start;
     justify-content: flex-end;
+    margin-bottom: 100px;
 }
 
-.TopFooterInfo {
-    width: 100%;
-    height: 120px;
+.topRight {
     display: flex;
+    position: relative;
+    margin-bottom: 100px;
+}
+
+.subscribe {
+    display: flex;
+    position: relative;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
-.rightFooterInfo {
-    width: 100%;
-    height: 100px;
-
-}
-
-.imgValuable {
-    width: 50%;
-    height: 70px;
+.form {
     display: flex;
-
-}
-
-.footerLogo {
-    width: 50px;
-    height: 58px;
-}
-
-.offerwallBox {
-    width: 220px;
-    height: 58px;
-    padding-left: 12px;
-
-}
-
-.offerwall {
-
-    color: var(--White, #FFF);
-    /*font-family: NordiquePro-Bold;*/
-    font: 400 30px/0% "NordiquePro-Bold", sans-serif;
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 30px;
-
-}
-
-.monetization {
-    color: #E0FF22;
-    font: 400 30px/0% "NordiquePro-Bold", sans-serif;
-    font-size: 30px;
-    font-style: bold;
-    font-weight: 500;
-    line-height: 30px;
-}
-
-.valuable {
-    width: 100%;
-    height: 40px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 131.5%;
-    color: #FFF;
-}
-
-.leftFooterInfo {
-    width: 100%;
-    height: 80px;
-    display: flex;
+    position: relative;
+    width: 563px;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-
 }
 
-.info {
-    width: 100%;
-    height: 20px;
-}
 
-.rightInfo {
+
+.subscribeBox {
     display: flex;
+    position: relative;
     justify-content: space-between;
-    color: var(--Modal-grey-1, #DBDAD7);
-    font-family: Poppins, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+    box-sizing: border-box;
+    width: 325px;
+    height: 60px;
+
+}
+
+::placeholder {
+    font: 400 14px'gotham-book', normal;
+    color: #BABCCE;
+    line-height: 24px;
+
+}
+
+.inputE {
+    padding: 0px 15px;
+    width: 325px;
+    height: 60px;
+    border: 0.9375px solid #FFFFFF;
+    font: 400 14px'gotham-book', normal;
+    background-color: #101010;
+    line-height: 24px;
+    color: #BABCCE;
+}
+
+.alertMessage {
+    color: #BABCCE;
+    font: 400 16px'gotham-book', normal;
+    margin: 15px 0px;
+}
+
+.submit {
+    display: flex;
+    position: relative;
+    width: 210px;
+    height: 60px;
+
+}
+
+.submitButton {
+    position: relative;
+    width: 210px;
+    height: 60px;
+    background: #FFFFFF;
+    color: #1E1E1E;
+    font: 500 16px 'gotham-medium', normal;
+    line-height: 15px;
     text-transform: uppercase;
-
+    border: 0.9375px solid #FFFFFF;
 }
 
-.leftInfo {
-    width: 20%;
-    height: 100px;
+.bottomRight {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-bottom: 5px;
+    flex-direction: row;
+    position: relative;
+    width: 563px;
+    height: 215px;
+    align-content: flex-start;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 
-.footerDivider {
-    height: 1px;
-    width: 1110px;
-
+.spanTitleBottom {
+    font: 600 16px 'inter-semibold', normal;
+    line-height: 30px;
+    color: #FFFFFF;
 }
 
-.footerDivider>hr {
-    border: 0.5px solid #DEDEDE
+.spanTextBottom {
+    font: 400 14px 'inter-regular', normal;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-top: 16px;
 }
 
-.downFooterInfo {
-    width: 100%;
-    height: 103px;
-    font-size: 16px;
-    font-family: 'Poppins', sans-serif;
-    color: #DBDAD7;
+.supportedBy {
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    position: relative;
+    height: 215px;
+    justify-content: space-between;
 }
+
+.company {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.services {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.legal {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
 
 
 /*MOBILE RESPONSIVENESS*/
-@media only screen and (max-width: 1280px) and (min-width: 320px) {
+@media only screen and (max-width: 1130px) and (min-width: 393px) {
 
-    .footerName {
-        display: flex;
+
+    .footer,
+    .footer * {
+        box-sizing: border-box;
 
     }
 
-    .backgroundImage {
+    .footerContainer {
+        display: none;
+    }
+
+    .footerContainerMobile {
         position: relative;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        width: 1550px;
-        height: 617px;
+        background-color: #101010;
+        width: 100vw;
+        height: 1386px;
         margin: auto;
         overflow-x: hidden;
-        margin-top: -450px;
-        z-index: 50;
-    }
-
-
-    .innerFooterInfo {
-        margin: 20px;
-        height: 370px;
-        position: relative;
-        display: flex;
-        justify-content: flex-start;
-        top: 200px;
-
-    }
-
-    .TopFooterInfo {
-        height: 290px;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        justify-content: flex-start;
-    }
-
-    .rightFooterInfo {
-        width: 100%;
-        display: flex;
-        align-items: flex-start;
-        align-content: flex-start;
-        flex-direction: column;
-        flex-wrap: wrap;
-        position: relative;
-    }
-
-    .footerLogo {
-        width: 33.104px;
-        height: 38.4px;
-        display: flex;
-        position: relative;
-        margin-top: 10px;
-    }
-
-    .offerwallBox {
-        width: 220px;
-        height: 58px;
-        padding-left: 12px;
-        margin: 10px 5px;
-        position: relative;
-
-    }
-
-    .offerwall {
-        color: var(--White, #FFF);
-        font-family: NordiquePro-Bold, sans-serif;
-        font-size: 19px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 105.3%;
-        position: absolute;
-
-    }
-
-    .monetization {
-        color: #E0FF22;
-        font-family: NordiquePro-Bold, sans-serif;
-        font-size: 19px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 105.3%;
-
-        position: absolute;
-    }
-
-    .imgValuable {
-        width: 33.104px;
-        height: 38.4px;
-        position: absolute;
-
-    }
-
-    .valuable {
-        width: 100%;
-        height: 36px;
-        flex-shrink: 0;
-        font-size: 14px;
-        top: 65px;
-        position: relative;
-    }
-
-    .info {
-        width: 100%;
-        height: 140px;
-        margin-top: 60px;
-
-    }
-
-
-    .leftFooterInfo {
-        position: relative;
-        margin-top: 20px;
-
-    }
-
-
-    .rightInfo {
-        font-size: 14px;
-        height: 140px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
     }
 
-    .leftInfo {
-        width: 24px;
-        height: 24px;
-        top: 80px;
+
+
+
+    .topMobile {
+        display: flex;
         position: relative;
+        height: 300px;
+        flex-direction: column;
+        align-items: center;
     }
 
+    .spanJoinMobile {
+        font: 500 24px'gotham-medium', normal;
+        line-height: 38px;
+        color: #FFFFFF;
+        margin-top: 50px;
+    }
+
+
+    .formMobile {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+        height: 140px;
+        margin-top: 30px;
+    }
+
+
+
+    .subscribeBoxMobile {
+        display: flex;
+        position: relative;
+        justify-content: space-between;
+        box-sizing: border-box;
+        width: 325px;
+        height: 50px;
+        margin-bottom: 30px;
+
+    }
+
+    ::placeholder {
+        font: 400 14px'gotham-book', normal;
+        color: #BABCCE;
+        line-height: 24px;
+
+    }
+
+    .inputEMobile {
+        padding: 0px 15px;
+        width: 325px;
+        height: 50px;
+        border: 0.9375px solid #FFFFFF;
+        font: 400 14px'gotham-book', normal;
+        background-color: #101010;
+        line-height: 24px;
+        color: #BABCCE;
+    }
+
+    .alertMessageMobile {
+        color: #BABCCE;
+        font: 400 16px'gotham-book', normal;
+        margin: 15px 0px;
+    }
+
+    .submitMobile {
+        display: flex;
+        position: relative;
+        width: 210px;
+        height: 50px;
+
+    }
+
+    .submitButtonMobile {
+        position: relative;
+        width: 210px;
+        height: 50px;
+        background: #FFFFFF;
+        color: #1E1E1E;
+        font: 500 14px 'gotham-medium', normal;
+        line-height: 15px;
+        text-transform: uppercase;
+        border: 0.9375px solid #FFFFFF;
+    }
+
+    .bottomMobile {
+        display: flex;
+        position: relative;
+        height: 1086px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .topBottomMobile {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 141px;
+    }
+
+    .monetizeMobile {
+        position: relative;
+        display: flex;
+    }
+
+    .spanMonetizeMobile {
+        font: 400 14px'gotham-book', normal;
+        line-height: 12px;
+        color: #FFFFFF;
+    }
+
+    .socialMobile {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        position: relative;
+        width: 247px;
+        height: 30.3px;
+        justify-content: space-between;
+    }
+
+    .bottomDivMobile {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+        height: 772px;
+        justify-content: space-between;
+    }
+
+    .spanTitleBottomMobile {
+        font: 600 16px 'gotham-medium', normal;
+        line-height: 30px;
+        color: #FFFFFF;
+    }
+
+    .spanTextBottomMobile {
+        font: 400 14px 'gotham-book', normal;
+        line-height: 24px;
+        color: #FFFFFF;
+        margin-top: 16px;
+    }
+
+    .supportedByMobile {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        height: 239px;
+        justify-content: space-between;
+    }
+
+    .companyMobile {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        align-items: center;
+    }
+
+    .legalMobile {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        align-items: center;
+    }
+
+    .servicesMobile {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        align-items: center;
+    }
 
     .footerDivider {
-        height: 0.7px;
-        width: 352px;
-        margin-left: auto;
-        margin-right: auto;
-
+        width: 351px;
+        height: 0px;
+        border: 0.5px solid #dccfff6e;
     }
 
-    .downFooterInfo {
-        width: 284px;
-        height: 81px;
-        text-align: center;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: normal;
-        margin-left: auto;
-        margin-right: auto;
+    .copyrightMobile {
+        position: relative;
+        width: 330px;
+        height: 24px;
+        margin-bottom: 20px;
     }
+
+    .spanCopyMobile {
+        font: 400 14px'gotham-book', normal;
+        line-height: 24px;
+        color: #FFFFFF;
+    }
+
 
 }
