--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -22,6 +22,7 @@
     position: relative;
     background-color: #101010;
     width: 100vw;
+    max-width: 1920px;
     height: 754px;
     margin: auto;
     overflow-x: hidden;
