--- a/src/pages/Game/Game.module.css
+++ b/src/pages/Game/Game.module.css
@@ -19,7 +19,7 @@ h2 {
     width: 100vw;
     max-width: 1920px;
     margin: auto;
-    margin-top: -100px;
+    margin-top: -120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -437,21 +437,22 @@ h2 {
     height: 950px;
     width: 100%;
     display: flex;
-
+    justify-content: center;
 }
 
 
 .thirdSectionLeft {
-    width: 770px;
+    width: 50%;
     height: inherit;
     display: flex;
     justify-content: flex-start;
 }
 
 .thirdSectionLeft>img {
-    width: 780px;
+    width: 100%;
     height: 950px;
     flex-shrink: 0;
+    object-fit: cover;
 }
 
 .thirdSectionLeftBG {
@@ -475,7 +476,7 @@ h2 {
 }
 
 .thirdSectionRight {
-    width: 748px;
+    width: 50%;
     background: #1E1E1E;
     display: flex;
     align-items: center;
@@ -486,10 +487,10 @@ h2 {
 
 .innerThirdSectionRight {
     height: 460px;
-    width: 500px;
+    width: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    margin-right: 150px;
 }
 
 .innerThirdAddWalls {
@@ -761,12 +762,13 @@ h2 {
     height: 801px;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-top: 0;
     z-index: 5;
 }
 
 .fifthGameLeft {
-    width: 729px;
+    width: 50%;
     height: 801px;
     flex-shrink: 0;
     border-radius: 0px 0px 120px 0px;
@@ -777,8 +779,13 @@ h2 {
     align-items: center;
 }
 
+.fifthGameLeft img {
+    margin-left: 250px;
+
+}
+
 .fifthGameRight {
-    width: 729px;
+    width: 50%;
     height: 801px;
     flex-shrink: 0;
     display: flex;
@@ -794,6 +801,7 @@ h2 {
     justify-content: space-between;
     width: 524px;
     height: 580px;
+    margin-right: 250px;
 }
 
 .fifthGameRightModel {
