--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -97,7 +97,7 @@ h2 {
 .text {
     color: var(--White, #FFF);
     font-family: gotham-light;
-    font-size: 55px;
+    font-size: 80px;
     font-style: normal;
     font-weight: 700;
     line-height: 131.5%;
@@ -108,7 +108,7 @@ h2 {
 .text2 {
     color: var(--White, #FFF);
     font-family: gotham-light;
-    font-size: 55px;
+    font-size: 80px;
     font-style: normal;
     font-weight: 400;
     line-height: 131.5%;
@@ -270,7 +270,7 @@ h2 {
 
 
 .blog {
-    font-size: 55px;
+    font-size: 80px;
     width: 68%;
     display: flex;
     justify-content: center;
@@ -1119,7 +1119,7 @@ h2 {
     color: var(--Primary-Black-1, #1E1E1E);
     text-align: center;
     font-family: gotham-light, sans-serif;
-    font-size: 55px;
+    font-size: 80px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -1129,7 +1129,7 @@ h2 {
 .solves {
     color: #8764E3;
     font-family: gotham-light, sans-serif;
-    font-size: 55px;
+    font-size: 80px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -1240,7 +1240,7 @@ h2 {
     color: var(--Primary-Black-1, #8764E3);
     text-align: center;
     font-family: gotham-light, sans-serif;
-    font-size: 55px;
+    font-size: 80px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -2050,23 +2050,13 @@ h2 {
         justify-content: flex-start;
         align-items: center;
     }
-
-
-    .mainFirstMobile {
+    .mainSecondMobile{
         display: flex;
         width: 352px;
-        
-        height: 1305px;
+        /* height: 1105px; */
         flex-direction: column;
         align-items: center;
         padding-top: 100px;
-    }
-
-    .rightMainMobile {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin-top: 20px;
     }
 
     .textSecondMobile {
@@ -2078,71 +2068,6 @@ h2 {
         line-height: 36px;
     }
 
-    .bottomHeroMobile {
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-
-    .bottomHeroMobile h2 {
-        color: #FFF;
-        width: 200px;
-        font-feature-settings: 'clig'off, 'liga'off;
-        font-family: gotham-light;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 26px;
-        /* 185.714% */
-    }
-
-    .bottomHeroRightMobile {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 15px;
-    }
-
-    .bottomHero1Mobile {
-        color: #FFF;
-        font-family: gotham-light;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 30px;
-        /* 60% */
-        letter-spacing: -2.25px;
-        margin-right: 35px;
-    }
-
-    .bottomHeroLeftMobile {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .bottomHero2Mobile {
-        color: #FFF;
-        font-family: gotham-light;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 30px;
-        /* 60% */
-        letter-spacing: -2.25px;
-        margin-right: 30px;
-    }
-
-
-    .forMonetize {
-        display: flex;
-    }
-
-    .paragMobile {
-        width: 100%;
-        height: 90px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
 
     .innerParagSecondMobile {
         width: 352px;
@@ -2156,50 +2081,6 @@ h2 {
         /* 157.143% */
     }
 
-    .buttonTextMobile {
-        display: inline-flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .buttonText1Mobile, .buttonText2Mobile {
-        border: 1px solid #FFF;
-        width: 220px;
-        height: 46px;
-        flex-shrink: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #FFFFFF;
-        color: var(--Modal-grey-1, #000000);
-        text-align: center;
-        font-family: gotham-light, sans-serif;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        z-index: 5;
-    }
-
-    .buttonText2Mobile {
-        width: 320px;
-    }
-
-    .downClickImgMobile {
-        width: 99.5%;
-        height: 250px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-top: 60px;
-    }
-
-    .downClickImgMobile>img {
-        width: 144px;
-        height: 144px;
-    }
-
 
     .leftMainMobile {
         width: 100%;
@@ -2207,22 +2088,7 @@ h2 {
         align-items: center;
         justify-content: center;
         z-index: 5;
-
-
     }
-
-    .leftImgInfoSecondMobile {
-
-        margin-top: -50px;
-        margin-bottom: 100px;
-    }
-
-    .leftImgMobile {
-        width: 350px;
-        height: 350px;
-        transition: all 2s ease;
-    }
-
 
     /* THIRD MOBILE SECTION */
 
